--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "herramientas-misa-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.4",
-    "cheerio": "^1.0.0-rc.10",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  },
-  "description": "",
-  "engines": {
-    "node": "16.2.0"
-  }
+	"name": "herramientas-misa-server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/index.js",
+		"dev": "nodemon src/index.js"
+	},
+	"keywords": [],
+	"author": "Daniel Vinet",
+	"license": "ISC",
+	"type": "module",
+	"dependencies": {
+		"axios": "^0.21.4",
+		"cheerio": "^1.0.0-rc.10",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mongoose": "^6.0.3",
+		"request": "^2.88.2",
+		"request-promise": "^4.2.6"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.12"
+	},
+	"description": "",
+	"engines": {
+		"node": "16.2.0"
+	}
 }
